--- a/index.html
+++ b/index.html
@@ -1,23 +1,31 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Documento sin título</title>
+	<script src="cordova-1.7.0.js"></script>
+	<script>
+	function init() {
+		document.addEventListener("deviceready", startup, false);
+	}
+ 
+	function startup() {
+		console.log("Business time...");
+ 
+		document.addEventListener("menubutton", doMenu, false);
+	}
+ 
+	function doMenu() {
+		console.log("The menu was clicked...");
+	}
+	</script>
 </head>
-
-<body>
-<form method="post" id="formid">	    		
-Nombre:<input type="text" name="nombre" id="nombre" class="frm_input_cuadrado" size="20" maxlength="20"/><br /></td>
-Apellidos:<input type="text" name="apellido" id="apellido" class="frm_input_cuadrado" size="20" maxlength="50"/><br /></td>
-Email:<input type="text" name="email" id="email" class="frm_input_cuadrado" size="20" maxlength="25"/><br /></td>
-Teléfono:<input type="text" name="telefono" id="telefono" class="frm_input_cuadrado" size="20" maxlength="15"/></td>
-Población:<input type="text" name="poblacion" id="poblacion" class="frm_input_cuadrado" size="20" maxlength="30"/></td>
-Descripción del problema:<td colspan="2" align="center"><textarea id="mensaje" name="mensaje" rows="5" cols="45" class="frm_input_cuadrado" maxlength="500"></textarea><br /></td>
-<tr>
-<td class="error" colspan="2">Los campos marcados con una (*) son obligatorios.</td><td></td>
-</tr>
-<input type="submit" value="Enviar" class="sprites_gen" id="btn_accesos_1"/></td></tr>
-</table>
-</form>
+ 
+<body onload="init()">
+ 
+<h2>Menu Test</h2>
+ 
+<p>
+	Try hitting your menu button...
+</p>
+ 
 </body>
 </html>
