--- a/index.html
+++ b/index.html
@@ -24,7 +24,13 @@
 <h2>Menu Test</h2>
  
 <p>
-	Try hitting your menu button...
+	<form action="" method="get">
+<input type="submit" value="Compras" class="sprites_gen" id="btn_accesos_1"/>
+</form>
+<br />
+<form action="" method="get">
+<input type="submit" value="Atención a Clientes" class="sprites_gen" id="btn_accesos_1"/>
+</form>
 </p>
  
 </body>
